# perm-watcher

./: .gitlab-ci.yml  Cargo.toml  Dockerfile.j2  Earthfile  Makefile.toml  README.md
.gitea/workflows/: audit.yml  build.yml
ci/: Dockerfile  audit.sh  package.sh  publish-s3.sh
src/: main.rs
