[package]
name = "perm-watcher"
version = "1.0.8-dev"
authors = ["Robin Schoonover <robin@cornhooves.org>"]
description = "Change watched file permission bits automatically"
edition = "2021"
publish = false

[dependencies]
clap = { version = "3.2.0", features = ["derive", "cargo"] }
env_logger = "0.9"
notify = "5.0.0"
libc = "0.2.66"
log = "0.4"

[package.metadata.release]
dev-version = true
dev-version-ext = "dev"
post-release-commit-message = """
(cargo-release) start next version {{next_version}}

[ci skip]
"""
