[package]
name = "perm-watcher"
version = "1.0.8-dev"
authors = ["Robin Schoonover <robin@cornhooves.org>"]
description = "Change watched file permission bits automatically"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
env_logger = "0.10"
notify = "5.0.0"
libc = "0.2.66"
log = "0.4"

[package.metadata.release]
pre-release-commit-message = """
Release {{crate_name}} version {{version}}
"""
tag-message = """
Release {{crate_name}} version {{version}}
"""
